--- a/_config.yml
+++ b/_config.yml
@@ -4,27 +4,27 @@ favicon: images/favicon.ico
 
 # Personal info
 name: Kurt Heiss
-title: Senior Network System Administrator
+title: Project Management/Content Development
 email: kurtnheiss@gmail.com
 website: www.github.com/kurtnheiss/kurtnheiss.io
 
 # Social links
-twitter_username: facespics
-github_username:  sproogen
+twitter_username: kurtnheiss
+github_username:  kurtnheiss
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: chillwildlife
-linkedin_username: jameswgrant
+instagram_username: werewf
+linkedin_username: kurtnheiss
 # pinterest_username: jekyll
-youtube_username: globalmtb
+youtube_username: kurtnheiss
 # googleplus_username: +jekyll
 
 # About Section
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi, my name is Kurt Heiss and I'm a Project Manager/Content Developer. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
 
   I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
 
