--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ youtube_username: kurtnheiss
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name is Kurt Heiss and I'm a Project Manager/Content Developer. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
-
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  Hi, my name is Kurt Heiss and I'm a Project Manager/Content Developer.
+  
+  I am most skilled in <mark>Eating Pizza</mark>
 
 # Projects Section
 # projects_title: Projects
@@ -40,8 +40,9 @@ about_content: | # this will include new lines to allow paragraphs
 # More Section
 # more_title: A Little More About Me
 more_content: | # this will include new lines to allow paragraphs
-  Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-   - Rock climbing
+  Some of my other interests and hobbies are:
+   - Surfing
+   - Swimming
    - Gaming
    - Knitting
    - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
