--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,7 @@
 - layout: left
   name: Santa Clara University
   dates: 2010 - 2014
-  qualification: Master of Business Administration
+  qualification: Master of Business Administration (focus on Management and Marketing)
   quote: >
     Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
   description: | # this will include new lines to allow paragraphs
