--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,9 +2,9 @@
   name: Santa Clara University
   dates: 2010 - 2014
   qualification: Master of Business Administration (focus on Management and Marketing)
-  quote: >
-    Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
+  quote: > # also the world.
   description: | # this will include new lines to allow paragraphs
-    During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+    During my time at Santa Clara University I enhanced my business skills and acumen and learnt key business skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
 
-    I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+    Part of business school coursework is the membership in team cohorts for each course. MOre often than not I would lead my student cohort and drive the completion of our team assignments and deliverables.
+
