--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,7 +4,28 @@
   qualification: Master of Business Administration (focus on Management and Marketing)
   quote: > # also the world.
   description: | # this will include new lines to allow paragraphs
-    During my time at Santa Clara University I enhanced my business skills and acumen and learnt key business skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+    During my degree at Santa Clara University's, Leavey School of Business I enhanced my knowledge about 
+    key business knowledge and skills that have I have taken through my career such as teamwork and working 
+    to tight deadlines. 
+    Although it was challenging to do this while working full-time and managing the various sports teams 
+    and activites my son was on, I found the time to effectuate good study habits.
 
-    Part of business school coursework is the membership in team cohorts for each course. MOre often than not I would lead my student cohort and drive the completion of our team assignments and deliverables.
+    Part of business school coursework is the membership in team cohorts for each course. MOre often than 
+    not I would lead my student cohort and drive the completion of our team assignments and deliverables.
+
+- layout: left
+  name: Santa Clara University
+  dates: 2010 - 2014
+  qualification: Master of Business Administration (focus on Management and Marketing)
+  quote: > # also the world.
+  description: | # this will include new lines to allow paragraphs
+    During my degree at Santa Clara University's, Leavey School of Business I enhanced my knowledge about 
+    key business knowledge and skills that have I have taken through my career such as teamwork and working 
+    to tight deadlines. 
+    Although it was challenging to do this while working full-time and managing the various sports teams 
+    and activites my son was on, I found the time to effectuate good study habits.
+
+    Part of business school coursework is the membership in team cohorts for each course. MOre often than 
+    not I would lead my student cohort and drive the completion of our team assignments and deliverables.
+
 
