--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,8 +4,12 @@
   qualification: Master of Business Administration (focus on Management and Marketing)
   quote: > # also the world.
   description: | # this will include new lines to allow paragraphs
-    During my degree at Santa Clara University's, Leavey School of Business I enhanced my knowledge about 
-    key business knowledge and skills that have I have taken through my career such as teamwork and working 
+    During my degree at Santa Clara University's, Leavey School of Business I enhanced my business 
+    knowledge and acumen, as well as further developed key management, leadership, and writing skills. 
+    .
+    Although it was challenging to do this while working full-time and managing the various sports teams 
+    and activites my son was on, I found the time to effectuate good study habits.
+I have taken through my career such as teamwork and working 
     to tight deadlines. 
     Although it was challenging to do this while working full-time and managing the various sports teams 
     and activites my son was on, I found the time to effectuate good study habits.
@@ -14,8 +18,7 @@
     not I would lead my student cohort and drive the completion of our team assignments and deliverables.
 
 - layout: left
-  name: Santa Clara University
-  dates: 2010 - 2014
+  name: University of Washington
   qualification: Master of Business Administration (focus on Management and Marketing)
   quote: > # also the world.
   description: | # this will include new lines to allow paragraphs
