--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,8 +4,9 @@
   qualification: Master of Business Administration (focus on Management and Marketing)
   quote: > # also the world.
   description: | # this will include new lines to allow paragraphs
-    During my degree at Santa Clara University's, Leavey School of Business I enhanced my business 
+    Completion of my degree at the Leavey School of Business enhanced my business 
     knowledge and acumen, as well as further developed key management, leadership, and writing skills. 
+    Leading course cohorts by providing direction
     .
     Although it was challenging to do this while working full-time and managing the various sports teams 
     and activites my son was on, I found the time to effectuate good study habits.
@@ -19,16 +20,8 @@ I have taken through my career such as teamwork and working
 
 - layout: left
   name: University of Washington
-  qualification: Master of Business Administration (focus on Management and Marketing)
+  qualification: Bachelor of Science, Zoology
   quote: > # also the world.
   description: | # this will include new lines to allow paragraphs
-    During my degree at Santa Clara University's, Leavey School of Business I enhanced my knowledge about 
-    key business knowledge and skills that have I have taken through my career such as teamwork and working 
-    to tight deadlines. 
-    Although it was challenging to do this while working full-time and managing the various sports teams 
-    and activites my son was on, I found the time to effectuate good study habits.
-
-    Part of business school coursework is the membership in team cohorts for each course. MOre often than 
-    not I would lead my student cohort and drive the completion of our team assignments and deliverables.
-
+    Completion of my degree facilitated an Enivironemtal Scientist career in which I managed enivironmental investigations, collecting data, 
 
