--- a/_data/education.yml
+++ b/_data/education.yml
@@ -23,5 +23,6 @@ I have taken through my career such as teamwork and working
   qualification: Bachelor of Science, Zoology
   quote: > # also the world.
   description: | # this will include new lines to allow paragraphs
-    Completion of my degree facilitated an Enivironemtal Scientist career in which I managed enivironmental investigations, collecting data, 
+    Completion of my degree facilitated an Enivironemtal Scientist career in which I managed enivironmental 
+    investigations, collecting data, 
 
