--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,21 +1,22 @@
 - layout: left
   name: Santa Clara University
-  dates: 2010 - 2014
-  qualification: Master of Business Administration (focus on Management and Marketing)
+  qualification: Master of Business Administration - 2014 (focus on Management and Marketing)
   quote: > # also the world.
   description: | # this will include new lines to allow paragraphs
-    Completion of my degree at the Leavey School of Business enhanced my business 
-    knowledge and acumen, as well as further developed key management, leadership, and writing skills. 
-    Leading course cohorts by providing direction
-    .
-    Although it was challenging to do this while working full-time and managing the various sports teams 
+    Going to the Leavey School of Business was a tremendously enriching and rewarding learning experience! My business 
+    knowledge and acumen were enhanced along with development of key project management, leadership, and writing skills.
+    Completing challenging classes that required active participation through preparation and study as well as leading 
+    course project cohorts with classmates from different 
+    career backgrounds and disparate global locations to meet curriculum deadlines all while working full-time and managing my son's various
+    sports teams) was an excellent
+    test of my reslience, motivation, adaptability, fortitude
     and activites my son was on, I found the time to effectuate good study habits.
     I have taken through my career such as teamwork and working 
     to tight deadlines. 
     Although it was challenging to do this while working full-time and managing the various sports teams 
     and activites my son was on, I found the time to effectuate good study habits.
 
-    Part of business school coursework is the membership in team cohorts for each course. MOre often than 
+    P
     not I would lead my student cohort and drive the completion of our team assignments and deliverables.
 
 - layout: left
