--- a/_data/education.yml
+++ b/_data/education.yml
@@ -9,7 +9,7 @@
     course project cohorts with classmates from different 
     career backgrounds and disparate global locations to meet curriculum deadlines all while working full-time and managing my son's various
     sports teams) was an excellent
-    test of my reslience, motivation, adaptability, fortitude
+    test of my reslience, resolve, motivation, adaptability, fortitude
     and activites my son was on, I found the time to effectuate good study habits.
     I have taken through my career such as teamwork and working 
     to tight deadlines. 
@@ -24,6 +24,6 @@
   qualification: Bachelor of Science, Zoology
   quote: > # also the world.
   description: | # this will include new lines to allow paragraphs
-    Completion of my degree facilitated an Enivironemtal Scientist career in which I managed enivironmental 
-    investigations, collecting data, 
+    Completion of my degree facilitated an initial career as an Enivironemtal Scientist managing enivironmental 
+    investigations, collecting data,analytical, qualitiative, quantitiative
 
