--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,6 @@
-- layout: top-middle
-  name: Super awesome project
-  link: github.com/sproogen
+- layout: left
+  name: My Portfolio
+  link: https://drive.google.com/drive/folders/0B5o7-fHVavi8SkVjTEVtRDA1ZDQ?usp=sharing
   github: sproogen/resume-theme
   quote: >
     This portfolio features documentation for some of the school project and professional documentation
