--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,11 +1,9 @@
 - layout: left
   company: 8x8, Inc.
-  link: boringcompany.com
+  link: -------
   job_title: API Product Owner
-  dates: November 2017 - Present
+  dates: ------------
   quote: >
-   Solving 21st century problems by diging holes and making game changing 
-   products like the *not a flamethrower*
+   cloud communication platform
   description: | # this will include new lines to allow paragraphs
-    Every company needs its networks properly administered and 
-    The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+    -----------
