--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,8 +1,9 @@
 - layout: left
   name: My Portfolio
   link: https://drive.google.com/drive/folders/0B5o7-fHVavi8SkVjTEVtRDA1ZDQ?usp=sharing
-  github: sproogen/resume-theme
+  github: -------
   quote: >
     This portfolio features documentation for some of the school project and professional documentation
   description: | # this will include new lines to allow paragraphs
-    I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
+    ------- 
+    If you don't have a project as awesome as this I would advise you make one.
