--- a/_config.yml
+++ b/_config.yml
@@ -27,17 +27,13 @@ about_content: | # this will include new lines to allow paragraphs
   Hi, my name is Kurt Heiss and I'm a Project Manager/Content Developer based in the San Francisco Bay Area. I have extensive and varied experience working at both established Silicon Valley tech giants as well as and startups.
   Right now, I am working at 8x8 (a cloud all in suite of cloud commmunications solutions their public API program.
   
-  I am most skilled in <mark>Eating Pizza</mark>
-  
-   I am currently working for the Royal Bank of Scotland as a frontend software engineer on a comercial banking platform.
-
-I enjoy making clean and interactive UI that is quick and easy to use whilst also giving users an enjoyable experience. I have worked with a range of different languages and frameworks and I am always looking for opportunities to work with something new. The things that I currently have the most experience working with are: ES6 Javascript, React & Redux, Java, PHP, MySQL, Symfony, Android, SASS, git and AWS services.
-
-# Projects Section
-# projects_title: Projects
+  I am most skilled in <mark>------</mark>
 
 # Experience Section
 # experience_title: Experience
+
+# Projects Section
+# projects_title: Projects
 
 # Education Section
 # educaton_title: Education
@@ -59,7 +55,7 @@ more_content: | # this will include new lines to allow paragraphs
    - literature
    - speculative fiction
    
-   - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+   - [progrmainng](link)
 
 # Footer
 footer_show_references: true
