--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,21 +3,22 @@
   qualification: Master of Business Administration - 2014 (focus on Management and Marketing)
   quote: > # also the world.
   description: | # this will include new lines to allow paragraphs
-    Going to the Leavey School of Business was a tremendously enriching and rewarding learning experience! My business 
-    knowledge and acumen were enhanced along with development of key project management, leadership, and writing skills.
+    Going to the Leavey School of Business was a tremendously enriching and rewarding learning experience!
+    
+    My business knowledge and acumen were enhanced along with development of key project management, leadership, and writing skills.
+    
     Completing challenging classes that required active participation through preparation and study as well as leading 
-    course project cohorts with classmates from different 
-    career backgrounds and disparate global locations to meet curriculum deadlines all while working full-time and managing my son's various
-    sports teams) was an excellent
-    test of my reslience, resolve, motivation, adaptability, fortitude
+    course project cohorts with classmates from different career backgrounds and disparate global locations to meet curriculum 
+    deadlines all while working full-time and managing my son's various sports teams) was an excellent test of my reslience, resolve, motivation, adaptability, fortitude
     and activites my son was on, I found the time to effectuate good study habits.
+    
     I have taken through my career such as teamwork and working 
-    to tight deadlines. 
+    to tight deadlines.
+    
     Although it was challenging to do this while working full-time and managing the various sports teams 
     and activites my son was on, I found the time to effectuate good study habits.
 
-    P
-    not I would lead my student cohort and drive the completion of our team assignments and deliverables.
+   I would lead my student cohort and drive the completion of our team assignments and deliverables.
 
 - layout: left
   name: University of Washington
