--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ more_content: | # this will include new lines to allow paragraphs
   In my free time, I like to learn new skills and exercise. Right now I am taking front-end web developer coursework through free code camp.
   
   Some of my other interests and hobbies are:
-   - Surfing (prepping at Ocean Beach)
+   - [Surfing] (images/surfsup.jpg)
    - Swimming (alcatraz swim a few years back)
    - Writing screenplays
    - papier mache
