--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ more_content: | # this will include new lines to allow paragraphs
   now I am taking front-end web developer coursework through free code camp.
 more_image: images/profile.jpg
   
-  Some of my other interests and hobbies are:
+Some of my other interests and hobbies are -
    - [Surfing] (images/surfsup.jpg)
    - Swimming (alcatraz swim a few years back)
    - Writing screenplays
