--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ favicon: images/favicon.ico
 
 # Personal info
 name: Kurt Heiss
-title: # Project Management/Content Development
+# title: Project Management/Content Development
 email: kurtnheiss@gmail.com
 ## website: www.github.com/kurtnheiss/kurtnheiss.io
 
