--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,9 @@ about_content: | # this will include new lines to allow paragraphs
 
   Intrigued by strategy, organization, design, writing, art, vegetarian cooking, classical and metal music, IDM, and thought provoking conversation.
 
-  I have extensive and varied experience working at both established Silicon Valley tech giants as well as startups.
+  Extensive and varied experience working at both established Silicon Valley tech giants as well as startups.
   
-  Right now, I am working at 8x8 (a cloud all in suite of cloud commmunications solutions) on their public API program.
+ Currently at 8x8 (a cloud all in suite of cloud commmunications solutions) helping develop their public API program.
 
 # Experience Section
 # experience_title: Experience
