--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,6 +3,19 @@
   qualification: Master of Business Administration - 2014 (focus on Management and Marketing)
   quote: > # also the world.
   description: | # this will include new lines to allow paragraphs
-    Going to the Leavey School of Business was a tremendously enriching and rewarding learning experience!
+    My business knowledge and acumen were enhanced along with development of key project management, leadership, and writing skills
+    
+    - Completing challenging classes that required active participation through preparation and study
+    - Leading course project cohorts with classmates from different career backgrounds and disparate global locations to meet curriculum deadlines
+    - Working full-time (and managing my son's various sports teams) was an excellent test of my reslience, resolve, motivation, adaptability, and fortitude
+
+- layout: left
+  name: University of Washington
+  qualification: Bachelor of Science, Zoology
+  quote: > # also the world.
+  description: | # this will include new lines to allow paragraphs
+     Completion of my degree facilitated an career as an Enivironemtal Scientist managing enivironmental 
+     investigations, collecting data, analytical, qualitiative, quantitiative
+
     
 
