--- a/_data/education.yml
+++ b/_data/education.yml
@@ -5,7 +5,7 @@
   description: | # this will include new lines to allow paragraphs
     My business knowledge and acumen were enhanced along with development of key project management, leadership, and writing skills
     
-    - Completing challenging classes that required active participation through preparation and study
+    - Completing challenging courses that required preparation and study to facilitate active participation
     - Leading course project cohorts with classmates from different career backgrounds and disparate global locations to meet curriculum deadlines
     - Working full-time (and managing my son's various sports teams) was an excellent test of my reslience, resolve, motivation, adaptability, and fortitude
 
@@ -14,7 +14,7 @@
   qualification: Bachelor of Science, Zoology
   quote: > # also the world.
   description: | # this will include new lines to allow paragraphs
-     Completion of my degree facilitated an career as an Enivironemtal Scientist managing enivironmental 
+     Completion of my degree facilitated an Environmental Scientist career managing enivironmental 
      investigations, collecting data, analytical, qualitiative, quantitiative
 
     
