--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,21 +1,24 @@
 - layout: left
-  name: Santa Clara University
+  name: Santa Clara University, Leavey School of Business
   qualification: Master of Business Administration - 2014 (focus on Management and Marketing)
   quote: > # also the world.
   description: | # this will include new lines to allow paragraphs
-    My business knowledge and acumen were enhanced along with development of key project management, leadership, and writing skills
+    My business knowledge and acumen were enhanced along with development of key project management, leadership, and writing skills:
     
     - Completing challenging courses that required preparation and study to facilitate active participation
     - Leading course project cohorts with classmates from different career backgrounds and disparate global locations to meet curriculum deadlines
-    - Working full-time (and managing my son's various sports teams) was an excellent test of my reslience, resolve, motivation, adaptability, and fortitude
+    - Working full-time and managing my son's various sports teams was an excellent test of my reslience, resolve, motivation, adaptability, and fortitude
 
 - layout: left
   name: University of Washington
-  qualification: Bachelor of Science, Zoology
+  qualification: Bachelor of Science in Zoology
   quote: > # also the world.
   description: | # this will include new lines to allow paragraphs
-     Completion of my degree facilitated an Environmental Scientist career managing enivironmental 
-     investigations, collecting data, analytical, qualitiative, quantitiative
+     Completion of my degree facilitated an Environmental Scientist career:
+     
+     - Managing enivironmental investigations per governmental regulatory mandates.
+     - Collecting and analyzing environmental data for real estate due diligence transactions
+     - Implementation and adherence of health and safety protocols
 
     
 
