--- a/_data/education.yml
+++ b/_data/education.yml
@@ -18,7 +18,7 @@
      
      - Managing enivironmental investigations per governmental regulatory mandates.
      - Collecting and analyzing environmental data for real estate due diligence transactions
-     - Implementation and adherence of health and safety protocols
+     - Implementation and enforcement of health and safety protocols for third party contractors
 
     
 
