--- a/_data/education.yml
+++ b/_data/education.yml
@@ -5,9 +5,9 @@
   description: | # this will include new lines to allow paragraphs
     My business knowledge and acumen were enhanced along with development of key project management, leadership, and writing skills:
     
-    - Completing challenging courses that required preparation and study to facilitate active participation
-    - Leading course project cohorts with classmates from different career backgrounds and disparate global locations to meet curriculum deadlines
-    - Working full-time and managing my son's various sports teams was an excellent test of my reslience, resolve, motivation, adaptability, and fortitude
+    - Completing challenging courses that required preparation and study to facilitate active participation.
+    - Leading course project cohorts with classmates from different career backgrounds and disparate global locations to meet curriculum deadlines.
+    - Working full-time and managing my son's various sports teams was an excellent test of my reslience, resolve, motivation, adaptability, and fortitude.
 
 - layout: left
   name: University of Washington
@@ -17,8 +17,8 @@
      Completion of my degree facilitated an Environmental Scientist career:
      
      - Managing enivironmental investigations per governmental regulatory mandates.
-     - Collecting and analyzing environmental data for real estate due diligence transactions
-     - Implementation and enforcement of health and safety protocols for third party contractors
+     - Collecting and analyzing environmental data for real estate due diligence transactions.
+     - Development, implementation, and enforcement of health and safety protocols.
 
     
 
