--- a/_config.yml
+++ b/_config.yml
@@ -51,16 +51,16 @@ more_content: | # this will include new lines to allow paragraphs
   now I am taking front-end web developer coursework through Free Code Camp.
   
   Some of my other interests and hobbies are -
+   - [Progrmainng](https://www.freecodecamp.org/kurtnheiss)
    - Surfing
    - Swimming 
    - Writing screenplays
-   - clay and papier mache sculptors
-   - trying different techniques on the guitar and bass
-   - returning to the cello
-   - learning German
-   - [reading](https://www.goodreads.com/user/show/5016817-kurt-heiss)
-   - [progrmainng](link)
-   - vegetarian cooking
+   - Clay and papier mache sculptors
+   - Trying different techniques on the guitar and bass
+   - Returning to the cello
+   - Learning German
+   - [Reading](https://www.goodreads.com/user/show/5016817-kurt-heiss)
+   - Vegetarian cooking
 
 # Footer
 footer_show_references: true
