--- a/_config.yml
+++ b/_config.yml
@@ -51,9 +51,11 @@ more_content: | # this will include new lines to allow paragraphs
   
   Right now I am taking front-end web developer coursework through [Free Code Camp](https://www.freecodecamp.org/kurtnheiss).
   
-  Some of my other interests and hobbies are -
+  Some of my other interests and hobbies are:
+  
    - Surfing
    - Swimming 
+   - Hiking
    - Writing screenplays
    - Clay and papier mache sculptors
    - Trying different techniques on the guitar and bass
