--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ more_content: | # this will include new lines to allow paragraphs
    - Vegetarian cooking
 
 # Footer
-footer_show_references: false
+footer_show_references: true
 
 # Build settings
 remote_theme: sproogen/resume-theme
