--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -4,6 +4,6 @@
   job_title: API Product Owner
   dates: ------------
   quote: >
-   cloud communication platform
+   Cloud Communication Platform Public API Initiative
   description: | # this will include new lines to allow paragraphs
     -----------
