--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,9 +1,9 @@
 - layout: left
-  name: My Portfolio
+  name: My Portfolio (In Progress)
   link: https://drive.google.com/drive/folders/0B5o7-fHVavi8SkVjTEVtRDA1ZDQ?usp=sharing
   github: -------
   quote: >
     This portfolio features documentation for some of the school project and professional documentation
   description: | # this will include new lines to allow paragraphs
     ------- 
-    If you don't have a project as awesome as this I would advise you make one.
+    This portfolio features documentation for some of the school project and professional documentation
