--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -7,3 +7,23 @@
    Cloud Communication Platform Public API Initiative
   description: | # this will include new lines to allow paragraphs
     -----------
+
+- layout: left
+  company: Apple
+  link: -------
+  job_title: Information Development
+  dates: ------------
+  quote: >
+   Internal Kubernetes Platform Initiative
+  description: | # this will include new lines to allow paragraphs
+    -----------
+    
+    - layout: left
+  company: Google
+  link: -------
+  job_title: Information Development
+  dates: ------------
+  quote: >
+   Google Assistant Projects
+  description: | # this will include new lines to allow paragraphs
+    -----------
