--- a/_config.yml
+++ b/_config.yml
@@ -38,10 +38,10 @@ about_content: | # this will include new lines to allow paragraphs
   Currently at 8x8 (a cloud all in suite of cloud commmunications solutions) helping develop their public API program.
 
 # Experience Section
-# experience_title: Experience
+# experience_title: Experience (In Progress)
 
 # Projects Section
-# projects_title: Projects
+# projects_title: Projects (In Progress)
 
 # Education Section
 # educaton_title: Education
