--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,5 +1,5 @@
 - layout: left
-  name: My Portfolio (In Progress)
+  name: My Portfolio
   link: https://drive.google.com/drive/folders/0B5o7-fHVavi8SkVjTEVtRDA1ZDQ?usp=sharing
   github: -------
   quote: >
