--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ github_username:  kurtnheiss
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: werewf
+instagram_username: kurt.n.heiss
 linkedin_username: kurtnheiss
 # pinterest_username: jekyll
 youtube_username: kurtnheiss
