--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,9 +1,9 @@
 - layout: left
   name: My Portfolio
-  link: https://drive.google.com/drive/folders/0B5o7-fHVavi8SkVjTEVtRDA1ZDQ?usp=sharing
+  link: --------
   github: -------
   quote: >
-    This portfolio features documentation for some of the school project and professional documentation
+    (This portfolio)[https://drive.google.com/drive/folders/0B5o7-fHVavi8SkVjTEVtRDA1ZDQ?usp=sharing] features documentation for some of the school project and professional documentation
   description: | # this will include new lines to allow paragraphs
     ------- 
-    This portfolio features documentation for some of the school project and professional documentation
+    (In Progress)
