--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,7 +3,7 @@
   link: --------
   github: -------
   quote: >
-    (This portfolio)[https://drive.google.com/drive/folders/0B5o7-fHVavi8SkVjTEVtRDA1ZDQ?usp=sharing] features documentation for some of the school project and professional documentation
+    [This portfolio](https://drive.google.com/drive/folders/0B5o7-fHVavi8SkVjTEVtRDA1ZDQ?usp=sharing) features documentation for some of the school project and professional documentation
   description: | # this will include new lines to allow paragraphs
     ------- 
     (In Progress)
