--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,7 +2,7 @@
   name: My Portfolio
   link: --------
   github: -------
-  quote: >
+  quote: > (IN PROGRESS)
     
   description: | # this will include new lines to allow paragraphs
     ------- 
