--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ repository: kurtnheiss/kurtnheiss.io
 favicon: images/favicon.ico
 
 # Personal info
-name: Kurt N. Heiss
+name: Kurt N. Heiss (SITE IN PROGRESS)
 # title: Project Management/Content Development
 email: kurtnheiss@gmail.com
 ## website: www.github.com/kurtnheiss/kurtnheiss.io
