--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,28 +1,9 @@
-- layout: left
-  company: 8x8, Inc.
-  link: -------
-  job_title: API Product Owner
-  dates: ------------
+ layout: left
+  company: The Boring Company
+  link: boringcompany.com
+  job_title: Senior Network System Administrator
+  dates: November 2017 - Present
   quote: >
-   Cloud Communication Platform Public API Initiative
+   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
   description: | # this will include new lines to allow paragraphs
-    -----------
-- layout: left
-  company: Apple
-  link: -------
-  job_title: Information Development
-  dates: ------------
-  quote: >
-   Internal Kubernetes Platform Initiative
-  description: | # this will include new lines to allow paragraphs
-    -----------
-    
-    - layout: left
-  company: Google
-  link: -------
-  job_title: Information Development
-  dates: ------------
-  quote: >
-   Google Assistant Projects
-  description: | # this will include new lines to allow paragraphs
-    -----------
+    Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
