--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,4 +1,4 @@
- layout: left
+- layout: left
   company: The Boring Company
   link: boringcompany.com
   job_title: Senior Network System Administrator
